--- a/views/signin.html
+++ b/views/signin.html
@@ -40,7 +40,17 @@
     <script src="/node_modules/jquery/dist/jquery.js"></script>
     <script>
         // 处理表单提交
-        
+        $('#signin_form').on('submit',function(e){
+            e.preventDefault();
+            var formData = $(this).serialize();
+            $.post('/signin',formData,function(data){
+                if(data.code == 200){
+                    location.href = '/';
+                }else {
+                    alert(data.msg);
+                }
+            })
+        })
     </script>
 </body>
 
