--- a/views/index.html
+++ b/views/index.html
@@ -26,7 +26,7 @@
       </div>
       <div class="media-body">
         <h4 class="media-heading"><a href="/topic/{{ $value.id }}">{{ $value.title }}</a></h4>
-        <p>sueysok 回复了问题 • 2 人关注 • 1 个回复 • 187 次浏览 • {{ $value.createdAt }}</p>
+        <p>{{ $value.nickname }} 回复了问题 • 2 人关注 • 1 个回复 • 187 次浏览 • {{moment($value.createdAt).format('YYYY-MM-DD  HH:mm:ss')}}</p>
       </div>
     </li>
     {{ /each }}
