--- a/views/topic/create.html
+++ b/views/topic/create.html
@@ -13,6 +13,14 @@
             <div class="col-md-5">
                 <form id="form">
                     <div class="form-group">
+                        <label for="title">分类</label>
+                        <select name="categoryId" id="categoryId">
+                             {{each categories}}
+                             <option value="{{$value.id}}">{{$value.name}}</option>
+                             {{/each}}
+                        </select>
+                    </div>
+                    <div class="form-group">
                         <label for="title">标题</label>
                         <input type="text" class="form-control" id="title" name="title">
                     </div>
@@ -30,6 +38,20 @@
     <script src="/node_modules/bootstrap/dist/js/bootstrap.js"></script>
     <script>
         // 处理表单提交
+        $('#form').on('submit',function(e){
+              e.preventDefault();
+              var formdata = $(this).serialize();
+              $.post('/topic/create',formdata,function(data){
+                      var {code,msg} = data;
+                      if(code==200){
+                          location.href = '/';
+                      }else {
+                          alert(msg);
+                      }
+
+
+              })
+        })
     </script>
 </body>
 
